--- a/openssh/goals.html
+++ b/openssh/goals.html
@@ -34,7 +34,7 @@ Cтарый SSH 1 протокол доступен в двух варианта
 Поддержка обоих была удалена из OpenSSH начиная с
 <a href="https://www.openbsd.org/openssh/txt/release-7.6">версии 7.6</a>.
 Оба использовали асимметричный алгоритм шифрования
-<a href="https://man.openbsd.org/rsa">RSA</a>
+<a href="https://man.openbsd.org/RSA_generate_key">RSA</a>
 (срок действия патента в США истёк, так что теперь его можно
 свободно использовать) для обмена ключами и аутентификации, 3DES
 и <a href="https://man.openbsd.org/blowfish">Blowfish</a> для
@@ -46,12 +46,12 @@ Cтарый SSH 1 протокол доступен в двух варианта
 написана, чтобы, во-первых, избежать проблем с патентом RSA (более не
 существующей проблемы, так как срок действия патента истёк), во-вторых,
 чтобы решить проблему с CRC, которая была в первой версии, а так же по ряду
-технических проблем. Используя асимметричные алгоритмы
-<a href="https://man.openbsd.org/dsa">DSA</a>
+технических проблем. Используя только асимметричные алгоритмы
+<a href="https://man.openbsd.org/DSA_generate_key">DSA</a>
 и
-<a href="https://man.openbsd.org/dh">DH</a>, вторая версия не имеет
-проблем с патентами, а проблема с CRC решена в результате перехода на
-алгоритм
+<a href="https://man.openbsd.org/DH_generate_key">DH</a>,
+вторая версия не имеет проблем с патентами, а проблема с CRC решена в
+результате перехода на алгоритм
 <a href="https://man.openbsd.org/HMAC">HMAC</a>.
 Протокол SSH 2 поддерживает множество симметричных алгоритмов шифрования,
 а так же множество новых возможностей.
