[1.32] add line to the local libressl page

--- a/openssh/goals.html
+++ b/openssh/goals.html
@@ -57,7 +57,7 @@ Cтарый SSH 1 протокол доступен в двух варианта
 а так же множество новых возможностей.
 <p>
 
-OpenSSH использует библиотеку <a href="https://www.libressl.org">LibreSSL</a>
+OpenSSH использует библиотеку <a href="../libressl/index.html">LibreSSL</a>
 для некоторых своих криптографических операций, одним из примеров которой
 является AES-GCM.
 <p>
