--- a/hackathons.html
+++ b/hackathons.html
@@ -94,8 +94,8 @@ td {
     Март 28 - Апрель 5, 2019<br>
     Тайбэй, Тайвань<br>
     16 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    и Kevin Lo.
+    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
