--- a/libressl/index.html
+++ b/libressl/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>LibreSSL</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="the main LibreSSL page">
 <meta name="copyright" content="This document copyright 2014-2019 by OpenBSD.">
 <link rel="shortcut icon" HREF="favicon.ico" TYPE="image/x-icon">
@@ -12,18 +12,18 @@
 <table width="100%" height="100%" border="0" cellspacing="0" cellpadding="4">
 <tr>
   <td bgcolor="#99cced" rowspan="2" width="15%" valign=top>
-    <big><b>About&nbsp;LibreSSL</b></big>
+    <big><b>Проект&nbsp;LibreSSL</b></big>
     <br>
-    &nbsp;<a href="goals.html">Project Goals</a><br>
-    &nbsp;<a href="releases.html">Releases</a><br>
+    &nbsp;<a href="goals.html">Цели проекта</a><br>
+    &nbsp;<a href="releases.html">Релизы</a><br>
     &nbsp;<a href="signing.html">Release Signing</a><br>
-    &nbsp;<a href="papers.html">Papers</a><br>
-    &nbsp;<a href="patches.html">Patches</a><br>
-    &nbsp;<a href="mail.html">Mailing Lists</a><br>
+    &nbsp;<a href="papers.html">Доклады</a><br>
+    &nbsp;<a href="patches.html">Патчи</a><br>
+    &nbsp;<a href="mail.html">Почтовые рассылки</a><br>
     <br>
-    &nbsp;<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL">Download</a><br>
+    &nbsp;<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL">Скачать</a><br>
     <br>
-    <big><b>Getting&nbsp;Source</b></big>
+    <big><b>Исходники</b></big>
     <br>
     &nbsp;<a href="https://github.com/libressl-portable/">GitHub</a><br>
     &nbsp;<a href="https://cvsweb.openbsd.org/src/lib/libtls/">CVS on Web (libtls)</a><br>
@@ -35,48 +35,48 @@
   <td bgcolor="#ffffff" valign="top"><center>
     <img border="0" width=599 height=192 src="images/libressl.jpg"></center>
     <center><font color="#0000a0">
-    <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.8.3-relnotes.txt">LibreSSL 2.8.3</a> released December 15th, 2018<br>
+    Релиз <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.8.3-relnotes.txt">LibreSSL 2.8.3</a> состоялся 15 декабря 2018 года<br>
     </font></center>
     <p>
-    LibreSSL is a version of the TLS/crypto stack forked from
+    LibreSSL представляет из себя криптографический TLS-стек, возникший
+    как форк
     <a href="http://wiki.openssl.org/index.php/Code_Quality">OpenSSL</a>
-    in 2014, with goals of modernizing the codebase, improving security,
-    and applying best practice development processes.
+    в 2014, с целью улучшения качества кода, более повышенной безопасности,
+    и применения лучших практик к процессу разработки.
 
     <p>
-    Primary development occurs inside the OpenBSD source tree with the
-    usual care the project is known for.<br>
-    On a regular basis <a href="releases.html">the code
-    is re-packaged for portable use</a> by other operating systems
-    (Linux, FreeBSD, Windows, etc).
+    Первоночальная и основная разработка ориентированна на OpenBSD и разрабатывается
+    с обычной для проекта тщательностью.<br>
+    Регулярно код проекта <a href="releases.html">портируется</a> для других
+    ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    The latest stable release is 2.8.3<br/>
-    The latest development release is 2.9.0<br/>
-    See the <a href="releases.html">releases</a> page for support information.
+    Последней стабильной версией является 2.8.3<br/>
+    Последней версий для разработчиков является 2.9.0<br/>
+    Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
-    LibreSSL releases contain several parts:
+    LibreSSL состоит из следующих компонентов:
     <ul>
         <li><a href="https://man.openbsd.org/crypto.3">
-	    libcrypto</a>: a library of cryptography fundamentals</li>
+	    libcrypto</a>: основная криптографическая библиотека</li>
         <li><a href="https://man.openbsd.org/ssl.3">
-	    libssl</a>: a TLS library</li>
+	    libssl</a>: библиотека TLS</li>
         <li><a href="https://man.openbsd.org/tls_init.3">
-	    libtls</a>: a new TLS library, designed to make it easier to write
-            foolproof applications</li>
-	<li>Various utilities such as
+	    libtls</a>: новая TLS библотека, разработанная с целью более простого
+            создания защищенных приложений</li>
+	<li>Различные утилиты, такие как
 	    <a href="https://man.openbsd.org/openssl.1">openssl(1)</a>,
-	    <a href="https://man.openbsd.org/nc.1">nc(1)</a>, and
+	    <a href="https://man.openbsd.org/nc.1">nc(1)</a>, и
 	    <a href="https://man.openbsd.org/ocspcheck.8">ocspcheck(8)</a>.</li>
     </ul>
 
     <p>
-    LibreSSL is supported financially by the
+    Разработка LibreSSL финансово поддерживается 
     <a href="https://www.openbsdfoundation.org/">OpenBSD Foundation</a>
-    and the
-    <a href="https://www.openbsd.org/donations.html">OpenBSD Project</a>.
-    Please consider helping our efforts.
+    и
+    <a href="https://www.openbsd.org/donations.html">проектом OpenBSD</a>.
+    Пожалуйста не забывайте о том, что и вы можете поддержать проект.
     <p>
   </td>
   <td rowspan="2" width=20 valign=top>
@@ -86,7 +86,11 @@
 <td>
 <hr>
 <small>
-<em>Copyright &copy; 2014-2019 OpenBSD</em><br>
+<em>This site is a translated version of <a href="https://www.libressl.org">libressl.org</a>.
+Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
+and is going with the support of
+<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+volunteers</a>.</em>
 </small>
 </td>
 </tr>
