[1.730] link to local libressl

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <a href="https://www.opensmtpd.org">OpenSMTPD</a>,
       <a href="http://www.openiked.org">OpenIKED</a>,
       <a href="https://mandoc.bsd.lv">mandoc</a>,
-      <a href="https://www.libressl.org">LibreSSL</a>
+      <a href="libressl/index.html">LibreSSL</a>
       <br>
       <small>
       <em>This site is a translated version of <a href="https://www.openbsd.org/">openbsd.org</a>.
