--- a/libressl/goals.html
+++ b/libressl/goals.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>LibreSSL: Goals</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>LibreSSL: Цели проекта</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="copyright" content="This document copyright 2016 by OpenBSD.">
 <link rel="canonical" href="https://www.libressl.org/goals.html">
 </head>
@@ -14,25 +14,23 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Libre</i></font><font color="#000084">SSL</font></a>
-<font color="#e00000">Goals</font>
+<font color="#e00000">Цели проекта</font>
 </h2>
 <hr>
 
 <ul>
-	<li>Modernize the OpenSSL codebase to make it easier to audit, understand
-		and repair.</li>
-    <li>Apply best-practice development processes:
+	<li>Модернизировать код OpenSSL, чтобы сделать его более понятным, а
+		также упростить процесс аудита и исправлений.</li>
+    <li>Применять лучшую из практик для процесса разработки:
         <ul>
-            <li>Code Review</li>
-            <li>Frequent releases</li>
-            <li>Open development process</li>
+            <li>Проверка кода (Code Review).</li>
+            <li>Выпускать новые версии достаточно часто (Frequent releases).</li>
+            <li>Открытый процесс разработки (Open development process).</li>
         </ul>
     </li>
-	<li>Remove obsolete or broken features and operating system support</li>
-	<li>Use and encourage the incorporation of secure programming interfaces in
-		operating systems.</li>
-	<li>Provide secure alternatives on operating systems that do not yet have
-		secure programming interfaces available.</li>
+	<li>Удалить ненужную или поломанную функциональность и поддержку ОС.</li>
+	<li>Использовать безопасные API на уровне ОС.</li>
+	<li>Предоставить безопасные альтернативные API для ОС, где нет таковых.</li>
 </ul>
 
 </body>
