--- a/libressl/signing.html
+++ b/libressl/signing.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>LibreSSL: Release Signing</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>LibreSSL: Электронная подпись релизов</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="copyright" content="This document copyright 2016 by OpenBSD.">
 <link rel="canonical" href="https://www.libressl.org/signing.html">
 </head>
@@ -15,21 +15,27 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Libre</i></font><font color="#000084">SSL</font></a>
-<font color="#e00000">Release Signing</font>
+<font color="#e00000">Электронная подпись релизов</font>
 </h2>
 <hr>
 
 <p>
-LibreSSL portable releases are signed with a
-<a href="https://man.openbsd.org/signify.1">signify(1)</a>
-public key:
+Все релизы портированной версии LibreSSL получают электронную подпись при помощи
+<a href="https://man.openbsd.org/signify.1">signify(1)</a>, при использовании
+открытого (public) ключа:
 <a href="https://github.com/libressl-portable/portable/commit/c5c2aa37be6134f6552070ab21f49d53ebfe86e6">RWQg/nutTVqCUVUw8OhyHt9n51IC8mdQRd1b93dOyVrwtIXmMI+dtGFe</a>
 
 <p>
-They are co-signed with GPG using this <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl.asc">public key</a>.
+Они подписанны при помощи GPG, используюя этот <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl.asc">открытый ключ (public key)</a>.
 
 <p>
-Release signatures can be verified using the signify program from within the OpenBSD operating system itself, using the <a href="https://github.com/aperezdc/signify">portable version of signify</a>, which is available with recent <a href="https://packages.debian.org/search?keywords=signify-openbsd">Debian</a>, <a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> and <a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a></li> releases, or by using GPG.
+Подписи релизов можно проверить при помощи signify в самой OpenBSD, или при помощи 
+<a href="https://github.com/aperezdc/signify">портированной версии signify</a>,
+которая доступна в последних версиях
+<a href="https://packages.debian.org/search?keywords=signify-openbsd">Debian</a>,
+<a href="http://packages.ubuntu.com/search?keywords=signify-openbsd">Ubuntu</a> и
+<a href="https://aur.archlinux.org/packages/signify/">Arch Linux</a></li>, или при
+использовании GPG.
 
 </body>
 </html>
