--- a/libressl/index.html
+++ b/libressl/index.html
@@ -16,7 +16,7 @@
     <br>
     &nbsp;<a href="goals.html">Цели проекта</a><br>
     &nbsp;<a href="releases.html">Релизы</a><br>
-    &nbsp;<a href="signing.html">Release Signing</a><br>
+    &nbsp;<a href="signing.html">Электронная подпись</a><br>
     &nbsp;<a href="papers.html">Доклады</a><br>
     &nbsp;<a href="patches.html">Патчи</a><br>
     &nbsp;<a href="mail.html">Почтовые рассылки</a><br>
