--- a/libressl/goals.html
+++ b/libressl/goals.html
@@ -19,8 +19,8 @@
 <hr>
 
 <ul>
-	<li>Модернизировать код OpenSSL, чтобы сделать его более понятным, а
-		также упростить процесс аудита и исправлений.</li>
+    <li>Модернизировать код OpenSSL, с целью сделать его более понятным, а
+        также упростить процесс аудита и исправлений.</li>
     <li>Применять лучшую из практик для процесса разработки:
         <ul>
             <li>Проверка кода (Code Review).</li>
@@ -28,9 +28,9 @@
             <li>Открытый процесс разработки (Open development process).</li>
         </ul>
     </li>
-	<li>Удалить ненужную или поломанную функциональность и поддержку ОС.</li>
-	<li>Использовать безопасные API на уровне ОС.</li>
-	<li>Предоставить безопасные альтернативные API для ОС, где нет таковых.</li>
+    <li>Удалить ненужную или поломанную функциональность и поддержку ОС.</li>
+    <li>Использовать безопасные API на уровне ОС.</li>
+    <li>Предоставить безопасные альтернативные API для ОС, где нет таковых.</li>
 </ul>
 
 </body>
