--- a/libressl/papers.html
+++ b/libressl/papers.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>LibreSSL: Presentations and Papers</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>LibreSSL: Доклады</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="copyright" content="This document copyright 2016 by OpenBSD.">
 <link rel="canonical" href="https://www.libressl.org/papers.html">
 </head>
@@ -15,11 +15,11 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Libre</i></font><font color="#000084">SSL</font></a>
-<font color="#e00000">Presentations and Papers</font>
+<font color="#e00000">Доклады</font>
 </h2>
 <hr>
 
-<h3>Presentation: FSec 2015</h3>
+<h3>Доклад на FSec 2015</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="https://www.openbsd.org/papers/libtls-fsec-2015">LibreSSL and the new libtls API</a>
@@ -27,7 +27,7 @@ Bob Beck
 </strong></font><br>
 </blockquote>
 
-<h3>Presentation: EuroBSDCon 2014</h3>
+<h3>Доклад на EuroBSDCon 2014</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="https://www.openbsd.org/papers/eurobsdcon2014-libressl.html">LibreSSL: More Than 30 Days Later</a>
@@ -35,7 +35,7 @@ Ted Unangst
 </strong></font><br>
 </blockquote>
 
-<h3>Presentation: BSDcan 2014</h3>
+<h3>Доклад на BSDcan 2014</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="https://www.openbsd.org/papers/bsdcan14-libressl">LibreSSL - The first 30 days and the Future</a>
