--- a/libressl/mail.html
+++ b/libressl/mail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>LibreSSL: Mailing Lists</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>LibreSSL: Почтовые рассылки</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="copyright" content="This document copyright 2016 by OpenBSD.">
 <link rel="canonical" href="https://www.libressl.org/mail.html">
 </head>
@@ -15,18 +15,18 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Libre</i></font><font color="#000084">SSL</font></a>
-<font color="#e00000">Mailing Lists</font>
+<font color="#e00000">Почтовые рассылки</font>
 </h2>
 <hr>
 
 <p>
-There are two mailing lists for LibreSSL:
+Для обсуждения LibreSSL есть две рассылки:
 <p>
-<a href="email:libressl@openbsd.org">libressl@openbsd.org</a> - public list for technical discussion about LibreSSL on any operating system.
+<a href="email:libressl@openbsd.org">libressl@openbsd.org</a> - открытая для всех, где обсуждаются технические стороны проекта LibreSSL на любой ОС.
 <p>
-<a href="email:libressl-security@openbsd.org">libressl-security@openbsd.org</a> - private list for reporting severe vulnerabilities in OpenSSL or LibreSSL to the core LibreSSL team.
+<a href="email:libressl-security@openbsd.org">libressl-security@openbsd.org</a> - доступная только для разработчиков LibreSSL, где обсуждаются уязвимости в OpenSSL или LibreSSL.
 <p>
-See <a href="https://www.openbsd.org/mail.html">https://www.openbsd.org/mail.html</a> for more details on posting or subscribing.
+Больше информации касательно рассылок можно найти на странице <a href="https://www.openbsd.org/mail.html">https://www.openbsd.org/mail.html</a>.
 
 
 </body>
