[1.538] update links to faq17

--- a/faq/index.html
+++ b/faq/index.html
@@ -189,14 +189,14 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq16.html#VMMnet"       >Сеть</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq17.html">Virtual Private Networks (VPN)</a></h3>
+<h3><a href="faq17.html">Virtual Private Networks (VPN)</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq17.html#introduction"   >Введение</a>
-<li><a href="https://www.openbsd.org/faq/faq17.html#authentication" >Аутентификация</a>
-<li><a href="https://www.openbsd.org/faq/faq17.html#server"         >Настройка IKEv2 сервера</a>
-<li><a href="https://www.openbsd.org/faq/faq17.html#site2site"      >Сборка site-to-site VPNs</a>
-<li><a href="https://www.openbsd.org/faq/faq17.html#clientikev2"    >Соединение с IKEv2 OpenBSD VPN</a>
-<li><a href="https://www.openbsd.org/faq/faq17.html#clientikev1"    >Соединение с IKEv1/L2TP OpenBSD VPN</a>
+<li><a href="faq17.html#introduction"   >Введение</a>
+<li><a href="faq17.html#authentication" >Аутентификация</a>
+<li><a href="faq17.html#server"         >Настройка IKEv2 сервера</a>
+<li><a href="faq17.html#site2site"      >Создание межсетевых VPN-соединений</a>
+<li><a href="faq17.html#clientikev2"    >Подключение к IKEv2 OpenBSD VPN</a>
+<li><a href="faq17.html#clientikev1"    >Подключение к IKEv1/L2TP VPN</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/pf/index.html">Руководство PF</a></h3>
