--- a/libressl/index.html
+++ b/libressl/index.html
@@ -35,7 +35,8 @@
   <td bgcolor="#ffffff" valign="top"><center>
     <img border="0" width=599 height=192 src="images/libressl.jpg"></center>
     <center><font color="#0000a0">
-    Релиз <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.8.3-relnotes.txt">LibreSSL 2.8.3</a> состоялся 15 декабря 2018 года<br>
+    Релиз <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.9.1-relnotes.txt">LibreSSL 2.9.1</a>
+    состоялся 21 апреля 2019 года<br>
     </font></center>
     <p>
     LibreSSL представляет из себя криптографический TLS-стек, возникший
@@ -51,8 +52,7 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последней стабильной версией является 2.8.3<br/>
-    Последней версий для разработчиков является 2.9.0<br/>
+    Последней стабильной версией является 2.9.1<br/>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
