--- a/openssh/index.html
+++ b/openssh/index.html
@@ -44,7 +44,7 @@
     <img border="0" src="images/openssh.gif" height=191 width=578 alt="[OpenSSH]"></center>
 <p>
     <center><font color="#0000a0">
-    <a href="https://www.openbsd.org/openssh/txt/release-7.9">OpenSSH 7.9</a> вышла 19 октября 2018<br>
+    Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.0">OpenSSH 8.0</a> состоялся 18 апреля 2019 года.<br>
     </font></center>
 <p>
 OpenSSH это основной инструмент для создания соединений по протоколу SSH.
