--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       &nbsp;<a href="https://www.openbsd.org/plus.html">Changelog</a><br>
       &nbsp;<a href="faq/index.html">FAQ</a><br>
       &nbsp;<a href="https://man.openbsd.org">Man-страницы</a><br>
-      &nbsp;<a href="https://www.openbsd.org/errata64.html">Патчи</a><br>
+      &nbsp;<a href="https://www.openbsd.org/errata65.html">Патчи</a><br>
       &nbsp;<a href="ircs://irc.freenode.net:6697/openbsd">IRC</a><br>
       &nbsp;<a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a><br>
       &nbsp;<a href="https://www.openbsd.org/mail.html">Почтовые рассылки</a><br>
@@ -89,8 +89,8 @@
     </td>
     <td class="align-top">
       <div class="header">
-        <a href="64.html">
-        <img border="0" src="images/puffy64.jpg" height="198" width="599" alt="[OpenBSD 6.4]"></a>
+        <a href="65.html">
+        <img border="0" src="images/puffy65.gif" height="198" width="599" alt="[OpenBSD 6.5]"></a>
         <br>
         <span class="callout">
         Всего две уязвимости при стандартной установке за все время существования системы!<br>
@@ -106,8 +106,8 @@
       <p>
       Информацию по поводу загрузки OpenBSD можно найти на станице download.
       <p>
-      Последний релиз нашей системы, <a href="https://www.openbsd.org/64.html">OpenBSD 6.4</a>,
-      вышел 18 октября 2018.
+      Последний релиз нашей системы, <a href="https://www.openbsd.org/65.html">OpenBSD 6.5</a>,
+      вышел на неделю раньше запланированного срока - 24 апреля 2019 года.
       <p>
       OpenBSD разрабатывается добровольцами. Процесс разработки, а также
       <a href="hackathons.html">встречи разработчиков</a> возможны благодаря финансовым взносам,
