added russian part

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
       -->
       &nbsp;<a href="https://www.openbsd.org/donations.html">Пожертвования</a><br>
       &nbsp;<a href="https://www.openbsdfoundation.org/"><i>OpenBSD Foundation</i></a>
+      <p>
+      <big><b>Русское сообщество</b></big><br>
+      &nbsp;<a href="ru-community/articles.html">Статьи</a>
+      &nbsp;<a href="https://vk.com/openbsd_hackers">Группа в VK</a>
+      <br>
+      &nbsp;<a href="https://github.com/openbsd-ru">Проект на GitHub</a>
+      <br>
+
+
     </td>
     <td class="align-top">
       <div class="header">
