add pledge(2) article

--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -14,7 +14,13 @@
 <i><font color="#0000ff">Open</font></i><font color="#000084">BSD</font></a>
 <font color="#e00000">Статьи и другой материал сообщества на русском языке</font>
 </h2>
+
 <hr>
+<ul>
+	<li>
+		<a href="https://mailbsd.org/blog/2019/4/25/pledge.html">Pledge(2)</a> - Очередной Security Layer в OpenBSD.
+	</li>
+</ul>
 
 </body>
 </html>
