--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -10,7 +10,7 @@
 <body bgcolor="#ffffff" text="#000000" link="#23238E">
 
 <h2>
-<a href="index.html">
+<a href="../index.html">
 <i><font color="#0000ff">Open</font></i><font color="#000084">BSD</font></a>
 <font color="#e00000">Статьи и другой материал сообщества на русском языке</font>
 </h2>
