[1.538] update links for faq5

--- a/faq/index.html
+++ b/faq/index.html
@@ -100,17 +100,17 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq15.html#PkgPartial"   >Незаконченная установка или удаление пакета</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq5.html">Сборка системы из исходников</a></h3>
+<h3><a href="faq5.html">Собираем систему из исходников</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Flavors"    >OpenBSD's Flavors</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Snapshots"  >Development Snapshots</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Bld"        >Сборка OpenBSD из исходников</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Release"    >Making a Release</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Xbld"       >Сборка X</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#buildprobs" >Распростаненные проблемы при компиляции</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Miscellanea">Miscellaneous Questions and Tips</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Custom"     >Custom Kernels</a>
-<li><a href="https://www.openbsd.org/faq/faq5.html#Diff"       >Подготовка Diff</a>
+<li><a href="faq5.html#Flavors"    >OpenBSD's Flavors</a>
+<li><a href="faq5.html#Snapshots"  >Development Snapshots</a>
+<li><a href="faq5.html#Bld"        >Собираем OpenBSD из исходников</a>
+<li><a href="faq5.html#Release"    >Making a Release</a>
+<li><a href="faq5.html#Xbld"       >Собираем X</a>
+<li><a href="faq5.html#buildprobs" >Распростаненные проблемы при компиляции</a>
+<li><a href="faq5.html#Miscellanea">Разные вопросы и советы</a>
+<li><a href="faq5.html#Custom"     >Custom Kernels</a>
+<li><a href="faq5.html#Diff"       >Подготовка Diff</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq14.html">Настройка диска</a></h3>
