--- a/libressl/releases.html
+++ b/libressl/releases.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>LibreSSL: Releases</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>LibreSSL: Релизы</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="copyright" content="This document copyright 2018 by OpenBSD.">
 <link rel="canonical" href="https://www.libressl.org/releases.html">
 </head>
@@ -15,191 +15,192 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Libre</i></font><font color="#000084">SSL</font></a>
-<font color="#e00000">Releases</font>
+<font color="#e00000">Релизы, выпуски, версии</font>
 </h2>
 <hr>
 
 <p>
-The LibreSSL project tracks OpenBSD development. Stable releases are derived
-from the most recent OpenBSD release, plus security updates as necessary.
-Development releases are derived from current OpenBSD development sources.
-The <a href="https://github.com/libressl-portable/portable/blob/master/ChangeLog">ChangeLog</a>
-summarizes many LibreSSL changes.
+Проект LibreSSL неразрывно связан с процессом разработки самой OpenBSD.
+Стабильные версии подготавливаются для каждого релиза OpenBSD, а также если
+возникает необходимость в обновлениях, связанных с безопасностю (security updates).
+Разрабатываемые версии программируются в среде current OpenBSD.
+В <a href="https://github.com/libressl-portable/portable/blob/master/ChangeLog">
+ChangeLog</a> отражена история разработки LibreSSL.
 <p>
 
-<h3>Supported Platforms</h3>
+<h3>Поддерживаемые платформы</h3>
 <p>
-LibreSSL Portable is known to work well on the following platforms:
+Портируемая версия LibreSSL без проблем работает на следующих платформах:
 <ul>
-	<li>Linux (kernel 3.17 or later preferred)</li>
-	<li>FreeBSD (tested with 9.2 and later)</li>
-	<li>NetBSD (7.0 and later preferred)</li>
+	<li>Linux (на ядре 3.17 или более новом)</li>
+	<li>FreeBSD (в версии 9.2 и более новых)</li>
+	<li>NetBSD (версия 7.0 или более новая)</li>
 	<li>HP-UX (11i)</li>
-	<li>Solaris (11 and later preferred)</li>
-	<li>Mac OS X (tested with 10.8 and later)</li>
-	<li>AIX (5.3 and later)</li>
+	<li>Solaris (11 или более новые)</li>
+	<li>Mac OS X (протестированно в версии 10.8 и более новых)</li>
+	<li>AIX (5.3 и броее новые)</li>
 </ul>
 </p>
 <p>
-LibreSSL also supports the following Windows environments:
+LibreSSL работает и в Windows:
 <ul>
-	<li>Microsoft Windows (Vista or higher, x86 and x64)</li>
-	<li>Wine (32-bit and 64-bit)</li>
-	<li>Builds with Visual Studio 2013 or newer, Mingw-w64 and Cygwin</li>
+	<li>Microsoft Windows (Vista или новее, x86 и x64)</li>
+	<li>Wine (32х битные и 64х битные)</li>
+	<li>Сборки с Visual Studio 2013 или с более новой версией, Mingw-w64 и Cygwin</li>
 </ul>
 <p>
 
-<h3>Support Schedule</h3>
+<h3>Цикл поддерживаемых версий</h3>
 <p>
-LibreSSL transitions to a new stable release branch every 6 months in
-coordination with the OpenBSD development schedule. LibreSSL stable branches
-are updated for 1 year after their corresponding OpenBSD branch is tagged for release. See below for the current stable release branches.
+Стабильная версия LibreSSL выходит каждые 6 месяцев, в соответствии с графиком
+разработки самой OpenBSD, и поддерживается/обновляется в течение 1 года после выпуска
+OpenBSD, для которой она была подготовленна. Ниже приведены текущие стабильные версии.
 
-<h3>Releases</h3>
+<h3>Версии LibreSSL</h3>
 <p>
-A reverse chronological listing of releases:
+Список версий в обратном хронологическом порядке:
 <ul>
-<p><li><strong>LibreSSL 2.9.1</strong> (April 21st, 2019)
+<p><li><strong>LibreSSL 2.9.1</strong> (21 апреля 2019)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.9.1-relnotes.txt">2.9.1 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.9.0, 2.8.3, 2.7.5</strong> (December 15th, 2018)
+<p><li><strong>LibreSSL 2.9.0, 2.8.3, 2.7.5</strong> (15 декабря 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.9.0-relnotes.txt">2.9.0 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.8.3-relnotes.txt">2.8.3 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.7.5-relnotes.txt">2.7.5 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.8.2</strong> (October 18th, 2018)
+<p><li><strong>LibreSSL 2.8.2</strong> (18 октября 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.8.2-relnotes.txt">2.8.2 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.8.1</strong> (September 25th, 2018)
+<p><li><strong>LibreSSL 2.8.1</strong> (25 сентября 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.8.1-relnotes.txt">2.8.1 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.8.0</strong> (August 6th, 2018)
+<p><li><strong>LibreSSL 2.8.0</strong> (6 августа 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.8.0-relnotes.txt">2.8.0 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.6.5, 2.7.4</strong> (June 13th, 2018)
+<p><li><strong>LibreSSL 2.6.5, 2.7.4</strong> (13 июня 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.6.5-relnotes.txt">2.6.5 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.7.4-relnotes.txt">2.7.4 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.7.3</strong> (May 5th, 2018)
+<p><li><strong>LibreSSL 2.7.3</strong> (5 мая 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.7.3-relnotes.txt">2.7.3 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.7.2</strong> (April 1st, 2018) - OpenBSD 6.3-release
+<p><li><strong>LibreSSL 2.7.2</strong> (1 апреля 2018) - для OpenBSD 6.3
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.7.2-relnotes.txt">2.7.2 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.7.1</strong> (March 23rd, 2018)
+<p><li><strong>LibreSSL 2.7.1</strong> (23 марта 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.7.1-relnotes.txt">2.7.1 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.7.0</strong> (March 21st, 2018)
+<p><li><strong>LibreSSL 2.7.0</strong> (21 марта 2018)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.7.0-relnotes.txt">2.7.0 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.6.4</strong> (December 19th, 2017)
+<p><li><strong>LibreSSL 2.6.4</strong> (19 декабря 2017)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.6.4-relnotes.txt">2.6.4 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.6.3</strong> (November 6th, 2017) - OpenBSD 6.2-release
+<p><li><strong>LibreSSL 2.6.3</strong> (6 ноября 2017) - для OpenBSD 6.2
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.6.3-relnotes.txt">2.6.3 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.6.2</strong> (September 26th, 2017)
+<p><li><strong>LibreSSL 2.6.2</strong> (26 сентября 2017)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.6.2-relnotes.txt">2.6.2 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.6.1</strong> (September 6th, 2017)
+<p><li><strong>LibreSSL 2.6.1</strong> (6 сентября 2017)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.6.1-relnotes.txt">2.6.1 Release Notes</a>
 
 <p><li><strong>LibreSSL 2.5.5, 2.6.0</strong> (July 12th, 2017)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.5.5-relnotes.txt">2.5.5 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.6.0-relnotes.txt">2.6.0 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.5.4</strong> (May 1st, 2017)
+<p><li><strong>LibreSSL 2.5.4</strong> (1 мая 2017)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.5.4-relnotes.txt">2.5.4 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.5.3</strong> (April 11th, 2017) - OpenBSD 6.1-release
+<p><li><strong>LibreSSL 2.5.3</strong> (11 апреля 2017) - OpenBSD 6.1
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.5.3-relnotes.txt">2.5.3 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.5.2</strong> (March 26th, 2017)
+<p><li><strong>LibreSSL 2.5.2</strong> (26 марта 2017)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.5.2-relnotes.txt">2.5.2 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.5.1, 2.4.5, 2.3.10</strong> (Febuary 1st, 2017)
+<p><li><strong>LibreSSL 2.5.1, 2.4.5, 2.3.10</strong> (1 февраля 2017)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.5.1-relnotes.txt">2.5.1 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.4.5-relnotes.txt">2.4.5 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.10-relnotes.txt">2.3.10 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.4.4, 2.3.9</strong> (November 6th, 2016)
+<p><li><strong>LibreSSL 2.4.4, 2.3.9</strong> (6 ноября 2016)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.4.4-relnotes.txt">2.4.4 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.9-relnotes.txt">2.3.9 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.5.0, 2.4.3, 2.3.8</strong> (September 27th, 2016)
+<p><li><strong>LibreSSL 2.5.0, 2.4.3, 2.3.8</strong> (27 сентября 2016)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.5.0-relnotes.txt">2.5.0 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.4.3-relnotes.txt">2.4.3 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.8-relnotes.txt">2.3.8 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.4.2, 2.3.7</strong> (August 1st, 2016) - OpenBSD 6.0-release (subsequent 2.4.x releases have a stable API and ABI)
+<p><li><strong>LibreSSL 2.4.2, 2.3.7</strong> (1 августа 2016) - для OpenBSD 6.0 (subsequent 2.4.x releases have a stable API and ABI)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.4.2-relnotes.txt">2.4.2 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.7-relnotes.txt">2.3.7 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.4.1, 2.3.6, 2.2.9</strong> (June 9th, 2016)
+<p><li><strong>LibreSSL 2.4.1, 2.3.6, 2.2.9</strong> (9 июня 2016)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.4.1-relnotes.txt">2.4.1 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.6-relnotes.txt">2.3.6 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.4.0, 2.3.5, 2.2.8</strong> (May 31, 2016)
+<p><li><strong>LibreSSL 2.4.0, 2.3.5, 2.2.8</strong> (31 мая 2016)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.4.0-relnotes.txt">2.4.0 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.5-relnotes.txt">2.3.5 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.3.4, 2.2.7</strong> (May 3, 2016)
+<p><li><strong>LibreSSL 2.3.4, 2.2.7</strong> (3 мая 2016)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.4-relnotes.txt">2.3.4 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.7-relnotes.txt">2.2.7 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.3.3</strong> (Mar 22, 2016) - OpenBSD 5.9-release (subsequent 2.3.x releases have a stable API and ABI)
+<p><li><strong>LibreSSL 2.3.3</strong> (22 марта 2016) - OpenBSD 5.9-release (subsequent 2.3.x releases have a stable API and ABI)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.3-relnotes.txt">2.3.3 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.3.2, 2.2.6, 2.1.10</strong> (Jan 28, 2016)
+<p><li><strong>LibreSSL 2.3.2, 2.2.6, 2.1.10</strong> (28 января 2016)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.2-relnotes.txt">2.3.2 Release Notes</a>
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.6-relnotes.txt">2.2.6 Release Notes</a>
 
-<p><li><strong>LibreSSL 2.2.5, 2.1.9</strong> (Dec 7, 2015)
+<p><li><strong>LibreSSL 2.2.5, 2.1.9</strong> (7 декабря 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.5-relnotes.txt">Release Notes</a>
 
-<p><li><strong>LibreSSL 2.3.1</strong> (Nov 02, 2015)
+<p><li><strong>LibreSSL 2.3.1</strong> (2 ноября 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.1-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.2.4, 2.1.8, 2.0.6</strong> (Oct 15, 2015)
+<p><li><strong>LibreSSL 2.2.4, 2.1.8, 2.0.6</strong> (15 октября 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.4-relnotes.txt">Release Notes</a>
 
-<p><li><strong>LibreSSL 2.3.0</strong> (Sep 23, 2015)
+<p><li><strong>LibreSSL 2.3.0</strong> (23 сентября 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.3.0-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.2.3</strong> (Aug 29, 2015)
+<p><li><strong>LibreSSL 2.2.3</strong> (29 августа 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.3-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.2.2</strong> (Aug 5, 2015) - OpenBSD 5.8-release (subsequent 2.2.x releases have a stable API and ABI)
+<p><li><strong>LibreSSL 2.2.2</strong> (5 августа 2015) - для OpenBSD 5.8 (subsequent 2.2.x releases have a stable API and ABI)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.2-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.2.1</strong> (Jul 8, 2015)
+<p><li><strong>LibreSSL 2.2.1</strong> (8 июля 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.1-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.2.0</strong> (Jun 11, 2015)
+<p><li><strong>LibreSSL 2.2.0</strong> (11 июля 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.0-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.1.7</strong> (Jun 11, 2015)
+<p><li><strong>LibreSSL 2.1.7</strong> (11 июня 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.2.0-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.1.6</strong> (Mar 19, 2015)
+<p><li><strong>LibreSSL 2.1.6</strong> (19 матра 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.1.6-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.1.5</strong> (Mar 16, 2015) - OpenBSD 5.7-release (subsequent 2.1.x releases have a stable API and ABI)
+<p><li><strong>LibreSSL 2.1.5</strong> (16 марта 2015) - для OpenBSD 5.7 (subsequent 2.1.x releases have a stable API and ABI)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.1.5-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.1.4</strong> (Mar 3, 2015)
+<p><li><strong>LibreSSL 2.1.4</strong> (3 матра 2015)
 <br><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.1.4-relnotes.txt">Release notes</a>
 
-<p><li><strong>LibreSSL 2.1.3</strong> (Jan 21, 2015)
-<p><li><strong>LibreSSL 2.1.2</strong> (Dec 8, 2014)
-<p><li><strong>LibreSSL 2.1.1</strong> (Oct 16, 2014)
-<p><li><strong>LibreSSL 2.1.0</strong> (Oct 12, 2014)
-<p><li><strong>LibreSSL 2.0.5</strong> (Aug 8, 2014) - OpenBSD 5.6-release.
-<p><li><strong>LibreSSL 2.0.4</strong> (Aug 3, 2014)
-<p><li><strong>LibreSSL 2.0.3</strong> (Jul 21, 2014)
-<p><li><strong>LibreSSL 2.0.2</strong> (Jul 15, 2014)
-<p><li><strong>LibreSSL 2.0.1</strong> (Jul 13, 2014)
-<p><li><strong>LibreSSL 2.0.0</strong> (Jul 11, 2014) - First LibreSSL release, based on OpenBSD 5.6 development snapshot.
+<p><li><strong>LibreSSL 2.1.3</strong> (21 января 2015)
+<p><li><strong>LibreSSL 2.1.2</strong> (8 декабря 2014)
+<p><li><strong>LibreSSL 2.1.1</strong> (16 октября, 2014)
+<p><li><strong>LibreSSL 2.1.0</strong> (12 октября 2014)
+<p><li><strong>LibreSSL 2.0.5</strong> (8 августа 2014) - для OpenBSD 5.6.
+<p><li><strong>LibreSSL 2.0.4</strong> (3 августа 2014)
+<p><li><strong>LibreSSL 2.0.3</strong> (21 июля 2014)
+<p><li><strong>LibreSSL 2.0.2</strong> (15 июля 2014)
+<p><li><strong>LibreSSL 2.0.1</strong> (13 июля 2014)
+<p><li><strong>LibreSSL 2.0.0</strong> (11 июля 2014) - первая версия LibreSSL, основанная на разрабатываемом снапшоте OpenBSD 5.6.
 
 </ul>
 
