[1.731] fix link to 65.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </td>
     <td class="align-top">
       <div class="header">
-        <a href="65.html">
+        <a href="https://www.openbsd.org/65.html">
         <img border="0" src="images/puffy65.gif" height="198" width="599" alt="[OpenBSD 6.5]"></a>
         <br>
         <span class="callout">
