--- a/openbgpd/papers.html
+++ b/openbgpd/papers.html
@@ -19,6 +19,38 @@
 </h2>
 <hr>
 
+<h3>Доклад на EuroIX 34</h3>
+<blockquote>
+<font color="#009000"><strong>
+<a href="https://www.openbsd.org/papers/OpenBGPD-EuroIX34.pdf">OpenBGPD, Adding Diversity to Route Server Landscape</a>
+Claudio Jeker
+</strong></font><br>
+</blockquote>
+
+<h3>Доклад на DENOG 10</h3>
+<blockquote>
+<font color="#009000"><strong>
+<a href="https://www.openbsd.org/papers/OpenBGPD_gotta_go_fast-DENOG10.pdf">OpenBGPD, gotta go fast!</a>
+Claudio Jeker
+</strong></font><br>
+</blockquote>
+
+<h3>Доклад на SWINOG #34</h3>
+<blockquote>
+<font color="#009000"><strong>
+<a href="https://www.openbsd.org/papers/OpenBGPD_gotta_go_fast-SwiNOG34.pdf">OpenBGPD, gotta go fast!</a>
+Claudio Jeker
+</strong></font><br>
+</blockquote>
+
+<h3>Доклад на NetNOD Tech Meeting 2018</h3>
+<blockquote>
+<font color="#009000"><strong>
+<a href="https://www.openbsd.org/papers/OpenBGPD_gotta_go_fast-netnod2018.pdf">OpenBGPD, gotta go fast!</a>
+Claudio Jeker
+</strong></font><br>
+</blockquote>
+
 <h3>Доклад на RIPE 71</h3>
 <blockquote>
 <font color="#009000"><strong>
